Table produksi_graji_balken {
    id bigint
    kendala varchar
    created_at timestamp
    updated_at timestamp
}

Table pegawai_graji_balken {
    id bigint
    id_produksi_graji_balken bigint [ref: > produksi_graji_balken.id]
    id_pegawai bigint
    masuk time
    pulang time
    tugas varchar
    ijin varchar
    ket varchar
    created_at timestamp
    updated_at timestamp
}

Table hasil_graji_balken {
    id bigint
    id_produksi_graji_balken bigint [ref: > produksi_graji_balken.id]
    id_ukuran bigint
    id_jenis_kayu bigint
    jumlah int
    no_palet int
    created_at timestamp
    updated_at timestamp
}

Table validasi_graji_balken {
    id bigint
    id_produksi_graji_balken bigint [ref: > produksi_graji_balken.id]
    role varchar
    status varchar
    created_at timestamp
    updated_at timestamp
}